# Nyx

./: .gitattributes  .gitignore  EXTENSION_COMMAND_VERIFICATION.md  LICENSE  Makefile  NYCACHE_COMPLETION_STATUS.md  README.md  README.old.md  RELEASE_v6.0.0_NOTES.md  VS_CODE_EXTENSION_COMPLETION_REPORT.md  main.ny  ny.registry  nypm.js  nyx.bat  nyx.sh  nyx_runtime.py  package.json
.github/: linguist.yml  linguist_nyx_definition.yml
.nyx/: _shared_test.json  site_runtime_state.json  stability.json  web_state.json
benchmarks/: NYX_VS_PYTHON_TRUTH.md  bench_array.ny  bench_fib.ny  bench_functions.ny  bench_hash.ny  bench_loops.ny  bench_string.ny  native_http_benchmark.py  nyx_vs_python_benchmark.py
compiler/: v3_compiler_template.c
docs/: ADVANTAGES.md  ALL_ENGINES_10_OF_10.md  ALL_QUESTIONS_PROVEN.md  ARCHITECTURE.md  BENCHMARKS.md  BEYOND_RUST_CPP_ZIG.md  BLUEPRINT_IMPLEMENTATION_STATUS.md  BREAFING_OF_NYX.md  COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DFAS_DOCUMENTATION.md  DFAS_PROJECT_COMPLETION.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  DUAL_IMPORT_SYNTAX.md  ECOSYSTEM.md  ENGINEERING_REQUIREMENTS.md  ENGINE_STACK_COMPLETE.md  EVIDENCE_SUMMARY.md  EXTREME_UPGRADE_PLAN.md  FEATURE_MAP.md  FILE_GENERATION.md  FILE_GENERATION_SUMMARY.md  FILE_MANIFEST.md  GITHUB_ACTIONS_FIX.md  GOVERNANCE.md  IMPORT_USE_EXAMPLES.md  IMPORT_USE_IMPLEMENTATION.md  IOMMU_DEPLOYMENT_CHECKLIST.md  IOMMU_DOCUMENTATION_INDEX.md  (+53 more)
native/backends/: CMakeLists.txt  README.md
native/backends/src/: nyx_backend_runtime.c  nyx_backend_runtime.h
(+809 files in other folders)
